# WeatherAutomatedResponseSystem

./: .gitignore  CMakeLists.txt  README.md
i2c/: I2CSetup.h  I2Csetup.c
image_processing/: clearday.raw  processImage.c  processImage.h  test_compile_run.txt  test_processImage.c  test_process_image.c
image_processing/samples/: clearday.raw  clearday2.raw  clearnight.raw  clearnight2.raw  lightrainnight.raw  rain1.raw  rainday.raw  rainday3.raw  rainday320420.data  rainevening2.raw
led/: led.c  led.h
main/: CMakeLists.txt  main.c
motor/: motor.c  motor.h
sensors/: camera.h  camera_setup.c  lidar.h  lidar_setup.c  ov5642_regs.h  sensors_main.c  sensors_main.h
testIO/: gpio_read.c  gpio_read.h  gpio_write.c  gpio_write.h
